# DataHawk

./: .gitignore  README.md  gopro_accel.json  pyproject.toml
src/datahawk/: __init__.py  analysis_window.py  constants.py  driver_selector.py  gopro_parser.py  gopro_sf_detection.py  gps_utils.py  import_dialog.py  lap_detection.py  main.py  map_widget.py  mychron.py  sector_detection.py  session_browser.py  session_processing.py  session_utils.py  session_viewer.py  storage.py  track_selection_dialog.py  track_selector.py  types.py  video_sync.py  xrz_parser.py
src/datahawk/session_processing/: __init__.py  best_theoretical.py  lap_detection.py  sector_detection.py  session_processing.py  synthetic_channels.py
src/datahawk/session_viewer/: __init__.py  delta_bar.py  graph_panel.py  lap_table.py  map_widget.py  session_viewer.py  telemetry_graph.py  video_player.py
src/datahawk/source/: __init__.py  channel_constants.py  types.py
src/datahawk/source/gopro/: __init__.py  gopro_parser.py  gopro_video_sync.py  video_sync.py
src/datahawk/source/insta360/: insta360_parser.py  insta360_video_sync.py
src/datahawk/source/mychron/: __init__.py  mychron.py  xrz_parser.py
src/datahawk/source/smartycam/: smartycam_parser.py
src/datahawk/utils/: gps_utils.py  mp4_utils.py
tools/: gopro_gps_inspector.py  gps_drift_correction.py  track_boundary_detect.py  xrz_inspector.py
