[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datahawk"
version = "0.1.0"
description = "Go-kart telemetry and video analysis"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
]

[project.scripts]
datahawk = "datahawk.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datahawk"]
